# Intellisense-AI

./: .env-example  .gitignore  LICENSE  README.md  check_chroma.py  check_chroma_v3.py  chroma_output.txt  clean_metadata.py  diagnose_storage.py  fix_frontend_syntax.py  fix_output.txt  fix_vectors.py  force_migration.py  main.py  pyproject.toml  reproduce_ingestion.py  reproduction_output.txt  reproduction_verify.txt  reproduction_verify_2.txt  requirements.txt  test_evilearn_flow.py  test_output.txt  test_result.txt  test_result_v2.txt  test_result_v3.txt  test_result_v4.txt  test_result_v5.txt  verification_report.txt  verify_hardening.py  verify_operational_stability.py  verify_semantic_integrity.py  verify_stability.py  verify_subject_detection.py  verify_system_stability.py
app/: main.py
app/api/: dependencies.py
app/core/: admin_auth.py  auth_utils.py  config.py  logging.py  redis_client.py  user_store.py
app/infrastructure/: audit_store.py  cache_store.py  document_store.py  metadata_store.py  s3_client.py
app/rag/: adaptive_confidence.py  chunk_clusterer.py  chunker.py  confidence.py  reranker.py  (+19 more)
data/: metadata_index.db  retrieval_memory.db  student_knowledge.db
notebook-lm-frontend/: README.md  package.json  tailwind.config.js
notes_downloader/: download_notes.py
scripts/: debug_verification.py  live_validation.py  migrate_local_to_s3.py  test_output.txt  upload_to_pinecone.py  verify_admin_access.py  verify_dynamic_subject.py
test_data/: test_validation.db
tests/: analysis_sections_unittest.py  manual_test_ingestion.py  test_output.txt
(+136 files in other folders)
