[project]
name = "intellisense-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.3.4",
    "fastapi[standard]>=0.122.0",
    "groq>=0.36.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.1.0",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "langgraph-cli[inmem]>=0.4.7",
    "langsmith>=0.4.49",
    "openai>=2.8.1",
    "pinecone>=8.0.0",
    "pydantic>=2.12.5",
    "rank-bm25>=0.2.2",
    "starlette==0.41.2",
    "uvicorn>=0.38.0",
]
